# finalfyp

./: .gitignore  .replit  README.md  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: dataset_(1)_(1)_1775830558771.json  dataset_1776628602847.json
backend/: requirements.txt
backend/app/: __init__.py  dataset.json  main.py  unknown_questions.json
frontend/: academics.html  admin.html  faq.html  firebase.js  firstscreen.html  index.html  login.html  register.html  registerHandler.js  resetpassword.html  voicechat.html  welcomescreen.html
